--- a/nav bar/nav.html
+++ b/nav bar/nav.html
@@ -9,14 +9,14 @@
     <title>Chai Counter</title>
 </head>
 <body>
-<header class="text-gray-600 body-font">
+<header class="text-gray-600 body-font" id="nav-placeholder"> 
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="../index.php">
+    <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0" href="../index.html">
       <img src="../images/logo.png" alt="logo">
       <!-- <span class="ml-3 text-xl">Tailblocks</span> -->
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center mt-6">
-      <a class="btn1 mr-5" href="../counter/counter.php">Counter</a>
+      <a class="btn1 mr-5" href="../counter/counter.html">Counter</a>
       <a class="btn2 mr-5 ml-10" href="/LoginSystem/login.php">Login/SignUp</a>
     </nav>
   </div>
