index page linked with navbar and content added

--- a/counter/counter.html
+++ b/counter/counter.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+    <!-- loading nav bar on every page -->
     <div id="nav-placeholder"></div>
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script>
