--- a/Login System/Login.html
+++ b/Login System/Login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../nav bar/style.css">
-    <link rel="stylesheet" href="../LoginSystem/login.css">
+    <link rel="stylesheet" href="../Login System/style.css">
     <title>Chai Counter ~ Login</title>
 </head>
 <body>
