--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="nav-placeholder"></div>
     <script src="//code.jquery.com/jquery.min.js"></script>
     <script>
-        $.get("../nav bar/nav.html", function (data) {
+        $.get("./nav bar/nav.html", function (data) {
             $("#nav-placeholder").replaceWith(data);
         });
     </script>
