--- a/index.html
+++ b/index.html
@@ -7,29 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./nav bar/style.css">
     <link rel="stylesheet" href="./partials/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Chai Counter</title>
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
-    .para {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 900;
-        font-size: 48px;
-        color: #20262F;
-    }
-
-    .txtCenter {
-        font-family: 'Montserrat';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 24px;
-        text-transform: uppercase;
-        color: #20262F;
-    }
-</style>
-
 <body>
     <!-- loading nav bar on every page -->
     <div id="nav-placeholder"></div>
